--- a/css/creative.css
+++ b/css/creative.css
@@ -80,6 +80,15 @@ img::-moz-selection {
   background: transparent;
 }
 
+
+#control-container {
+  padding: 0px !important;
+}
+
+.e-upload {
+  width: 72%;
+}
+
 #mainNav {
   border-bottom: 1px solid rgba(33, 37, 41, 0.1);
   background-color: #fff;
