--- a/css/creative.css
+++ b/css/creative.css
@@ -801,22 +801,22 @@ input[type="file" i] {
 
   }
 
-  #container_expand_on_hover .item_exp:hover p {
-        opacity: 1;
-        transition: 1.9s;
-    }
+#container_expand_on_hover .item_exp:hover p {
+      opacity: 1;
+      transition: 1.9s;
+  }
 
-    #container_expand_on_hover .item_exp p {
-          transform: none;
-          opacity: 0;
-          transition: .1s;
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          text-align: left;
-          padding-left: 1em;
-          color:blue;
-      }
+#container_expand_on_hover .item_exp p {
+      transform: none;
+      opacity: 0;
+      transition: .1s;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      text-align: left;
+      padding-left: 1em;
+      color:blue;
+  }
 
 #models ol, ul {
   transform: none;
@@ -825,17 +825,32 @@ input[type="file" i] {
 
 }
 
-
 #models ol, ul:hover {
   color: #5eb55b;
   transform: translateX(2vh);
 }
 
+#interp ol, ul {
+  transform: none;
+  transition: .3s;
+  color: black;
+}
+
+#interp span {
+  font-size: 1.1em;
+  color: green;
+  padding-left: 5px;
+  /* border-left: 2px solid #5eb55b; */
+}
+
+#interp ol, ul:hover {
+  color: green;
+  border-left: 2px solid #5eb55b;
+}
 
 #approach #model_table {
   padding: 30px;
   display: none;
-  visibility: hidden;
   margin: auto;
   height: 400px;
 }
